protocols/tests/multipliers/mult_d2/first_thread_fails.out
error: The two expressions did not evaluate to the same value (in transaction `mul(1, 2, 3)`)
   ┌─ multipliers/mult_d2/mult_d2.prot:22:13
   │
22 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 3, RHS Value: 2

Trace 0 execution failed.
